--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Snohomish Film Festival</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="yqqZwBIB7R67zGNLQ5P3m4ObWoFGBXIQUxEqfbXy6e0" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script data-ad-client="ca-pub-2626924352662007" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
