--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="yqqZwBIB7R67zGNLQ5P3m4ObWoFGBXIQUxEqfbXy6e0" />
+  <meta name="msvalidate.01" content="C9E085695AD6F26D0C2EC4C0E122A9C0" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script data-ad-client="ca-pub-2626924352662007" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
