trying to make it better

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <title>Snohomish Film Festival</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="mobile-web-app-capable" content="yes">
   <meta name="google-site-verification" content="yqqZwBIB7R67zGNLQ5P3m4ObWoFGBXIQUxEqfbXy6e0" />
   <meta name="msvalidate.01" content="C9E085695AD6F26D0C2EC4C0E122A9C0" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -14,15 +16,6 @@
 </head>
 
 <body>
-
-
-  <script>
-
-
-
-  </script>
-
-
 
   <script async defer crossorigin="anonymous"
     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=3399067146824355&autoLogAppEvents=1"
@@ -44,8 +37,8 @@
     </div>
   </div>
 
-  <div style="text-align: center;">
-    <div style="display: inline-block; border: 1px solid gray; width: 100%; max-width: 800px;">
+  <!--<div style="text-align: center;">
+    <div style="display: inline-block; border: 1px solid gray; width: 100%; max-width: 1000px;">
       <div style="text-align: center; font-size: 12px; color: white; background-color: #444;">Google Ads</div>
       <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2626924352662007" data-ad-slot="3410873039"
         data-ad-format="auto" data-full-width-responsive="true"></ins>
@@ -53,7 +46,7 @@
   </div>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  </script>-->
 
 
 </body>
